# event_sourcing.rs

./: .drone.yml  .gitignore  .rustfmt.toml  .versions.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  catalog-info.yaml  docker-compose.yml  entrypoint  mise.toml  pipeline.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yml  ci.yml
deploy/: build
esrs-core/: Cargo.toml
esrs-core/src/: aggregate.rs  lib.rs  policy.rs  state.rs  store.rs
esrs-core/src/postgres/: event.rs  mod.rs  projector.rs  util.rs
esrs-macros/: Cargo.toml
esrs-macros/src/: lib.rs
example/: .rustfmt.toml  Cargo.toml  Dockerfile  docker-compose.yml
example/src/: lib.rs  main.rs
example/src/payment/: command.rs  error.rs  event.rs  mod.rs  state.rs
example/src/payment/async_impl/: aggregate.rs  mod.rs
example/src/payment/blocking/: mod.rs
examples/: postgres_payments.rs  sqlite_payments.rs
examples/aggregate_deletion/: main.rs
examples/aggregate_merging/: Cargo.toml  README.md  Readme.md  main.rs  structs.rs
examples/aggregate_merging/migrations/: 20220824151818_counters.sql
examples/aggregate_merging/src/: aggregates.rs  lib.rs  main.rs  projectors.rs  structs.rs
examples/common/: a.rs  b.rs  lib.rs  util.rs
examples/common/basic/: event_handler.rs  mod.rs  view.rs
examples/common/shared/: event_handler.rs  mod.rs  view.rs
examples/crud_on_store/: Cargo.toml  README.md  main.rs
examples/crud_on_store/src/: lib.rs
examples/crud_on_store/statements/: delete_event_by_event_id.sql  select_by_event_id.sql  update_event_by_event_id.sql
examples/customize_persistence_flow/: Cargo.toml  README.md
examples/customize_persistence_flow/src/: aggregate.rs  main.rs  projector.rs  structs.rs
examples/delete_aggregate/: Cargo.toml  README.md  aggregate.rs  projector.rs
examples/delete_aggregate/src/: aggregate.rs  main.rs  projector.rs  structs.rs
examples/dyn_event_store_in_aggregate/: Cargo.toml  README.md  main.rs
examples/dyn_event_store_in_aggregate/src/: lib.rs
examples/event_bus/: kafka.rs  main.rs  rabbit.rs
examples/eventual_persistent_view/: event_handler.rs  main.rs
examples/eventual_view/: main.rs
examples/locking_strategies/: Cargo.toml  aggregate.rs  main.rs
examples/locking_strategies/src/: lib.rs
examples/migrations/: 20210512161500_credit_cards.sql  20210519114900_bank_accounts.sql  20220729154900_joined.sql
examples/multi_aggregate_rebuild/: main.rs  transactional_event_handler.rs
examples/optimistic_lock/: Cargo.toml
examples/optimistic_lock/src/: main.rs
examples/payments/: Cargo.toml  README.md
examples/payments/src/: main.rs
examples/pessimistic_lock/: Cargo.toml
examples/pessimistic_lock/src/: aggregate.rs  lib.rs  main.rs
examples/postgres/: Cargo.toml
examples/postgres/migrations/: 20210512161500_payments.sql
examples/postgres/src/: main.rs
examples/postgres_payments/: Cargo.toml  Makefile.toml
examples/postgres_payments/src/: command.rs  error.rs  event.rs  lib.rs  main.rs  policy.rs
examples/postgres_payments/src/aggregate/: account_aggregate.rs  credit_aggregate.rs  mod.rs
examples/postgres_payments/src/bank_account/: aggregate.rs  error.rs  event.rs  mod.rs  projector.rs  state.rs  store.rs
examples/postgres_payments/src/credit_card/: aggregate.rs  command.rs  error.rs  event.rs  mod.rs  policy.rs  projector.rs  state.rs  store.rs
examples/postgres_payments/src/projector/: account_projector.rs  credit_projector.rs  mod.rs
examples/postgres_payments/src/state/: account_state.rs  mod.rs
examples/postgres_payments/tests/: credit_card_test.rs  delete_bank_account_test.rs  order_test.rs
examples/readme/: main.rs
examples/rebuild_shared_projection/: Cargo.toml  README.md  Readme.md
examples/rebuild_strategies/: Cargo.toml  README.md  main.rs  projectors.rs  structs.rs
examples/rebuild_strategies/src/: lib.rs
examples/rebuilder/: Cargo.toml  README.md  Readme.md  event_handler.rs  main.rs  transactional_event_handler.rs
examples/saga/: aggregate.rs  event_handler.rs  main.rs
examples/schema/: adding_schema.rs  aggregate.rs  deprecating_events.rs  main.rs  upcasting.rs
examples/scribe/: main.rs
examples/shared_view/: event_handler.rs  main.rs  view.rs
examples/simple_projection/: Cargo.toml  README.md  Readme.md  main.rs
examples/simple_saga/: Cargo.toml  README.md  Readme.md  main.rs
examples/simple_saga/migrations/: README.md
examples/simple_saga/src/: aggregate.rs  lib.rs  main.rs  structs.rs
examples/simple_side_effect/: Cargo.toml  README.md  Readme.md  main.rs
examples/sqlite_payments/: Cargo.toml
examples/sqlite_payments/src/: main.rs
examples/sqlite_payments/src/bank_account/: aggregate.rs  event.rs  projector.rs  store.rs
examples/sqlite_payments/src/credit_card/: aggregate.rs  event.rs  mod.rs  policy.rs  projector.rs  store.rs
examples/sqlite_payments/tests/: credit_card_test.rs  delete_bank_account_test.rs
examples/store_crud/: main.rs
examples/transactional_view/: main.rs  transactional_event_handler.rs
examples/upcasting/: Cargo.toml  a.rs  aggregate.rs  b.rs  main.rs
macros/: Cargo.toml
src/: aggregate.rs  event.rs  handler.rs  lib.rs  manager.rs  query.rs  state.rs  util.rs
src/async_impl/: aggregate.rs  mod.rs  policy.rs  projector.rs  store.rs
src/blocking/: aggregate.rs  mod.rs  policy.rs  projector.rs  store.rs
src/bus/: mod.rs
src/esrs/: aggregate.rs  aggregate_manager.rs  aggregate_state.rs  event.rs  event_bus.rs  event_handler.rs  event_store.rs  manager.rs  mod.rs  policy.rs  pool.rs  projector.rs  query.rs  setup.rs  state.rs  store.rs
src/manager/: locked_load.rs
src/rebuilder/: mod.rs  pg_rebuilder.rs
src/sql/: event.rs  migrations.rs
src/store/: mod.rs
tests/: credit_card_test.rs  lib.rs  postgres_credit_card_test.rs  postgres_example_test.rs  sqlite_credit_card_test.rs
tests/aggregate/: event_handler.rs  mod.rs  structs.rs  transactional_event_handler.rs
tests/kafka/: mod.rs
tests/postgres/: builder.rs  manager.rs  mod.rs  pg_store.rs
tests/rabbit/: mod.rs
(+87 files in other folders)
