[package]
name = "esrs-macros"
version = "0.1.0"
edition = "2021"
description = "Esrs procedural macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primait/event_sourcing.rs"
readme = "../README.md"
documentation = "https://docs.rs/esrs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
