[package]
name = "example"
version = "0.1.0"
authors = ["Simone Cottini <cottini.simone@gmail.com>"]
edition = "2018"
default-run = "example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# async main
actix-rt = "^1.0"

esrs = { version = "0.2.0", features = ["async", "blocking", "postgresql"] }

async-trait = "0.1.40"
chrono = {version = "^0.4", features = ["serde"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
uuid = {version = "^0.8.1", features = ["serde", "v4"]}
thiserror = "^1.0"