[package]
name = "db"
version = "0.1.0"
authors = ["Matteo Giachino <matteog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

config = { path = "../config" }

shaku = "0.6.1"
#typed-sql = "0.1.2"
#typed-sql-derive = "0.1.1"
sqlx = { version = "0.4", features = ["postgres", "runtime-tokio-native-tls", "uuid", "json", "chrono", "offline"] }

thiserror = "1.0.24"
async-trait = "0.1.50"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
