[package]
authors = ["Simone Cottini <cottini.simone@gmail.com>"]
description = "example of how to create, read, update and delete records from event store"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "crud_on_event_store"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esrs = { version = "*", path = "../../", features = ["postgres"] }
# Sql library for async impl
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "uuid", "json", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.6", features = ["full"] }