[package]
authors = ["Simone Cottini <cottini.simone@gmail.com>"]
description = "An example of different strategies to rebuild projections"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "rebuild_strategies"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aggregate_merging = { version = "*", path = "../aggregate_merging/" }

# async main
tokio = { version = "1.6", features = ["full"] }
futures-util = "0.3"

esrs = { version = "*", path = "../../", features = ["postgres"] }
simple_projection = { version = "*", path = "../simple_projection/" }
# Sql library for async impl
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-native-tls",
  "uuid",
  "json",
  "chrono",
] }

async-trait = "0.1.50"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
