[package]
authors = ["Oliver Browne <oliver.browne@prima.it"]
description = "Simple esrs saga style aggregation example"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "simple_saga"
version = "0.1.0"

[dependencies]

# async main
tokio = { version = "1.6", features = ["full"] }

esrs = { version = "*", path = "../../", features = ["postgres"] }
# Sql library for async impl
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "uuid", "json", "chrono"] }

async-trait = "0.1.50"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
