[package]
name = "sqlite-payments"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Example of an esrs implementation for sqlite"
authors = ["Simone Cottini <cottini.simone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# async main
tokio = { version = "1.6", features = ["full"] }

esrs = { version = "*", path = "../../", features = ["sqlite"] }
# Sql library for async impl
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "uuid", "json", "chrono"] }

async-trait = "0.1.50"
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
thiserror = "^1.0"
